--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -1,7 +1,7 @@
 #footer{
   width: 100%;
-  background-color: #fff;
-  box-shadow: 0 0 34px 0 rgba(63, 66, 87, 0.1);
+  background-color: $em-bg-gray-dark;
+  box-shadow: 0 0 34px 0 $em-border-gray;
   padding: 10px 0;
   //position: sticky;
   //position: -webkit-sticky;
