--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -28,8 +28,8 @@ body{
   margin: 0;
   font-family: sans-serif;
   font-size: 13px;
-  color: $em-color;
-  background-color: $em-bg-color;
+  color: $em-text-gray;
+  background-color: $em-bg-gray-light;
   overflow-y: auto;
 
 }
@@ -37,7 +37,27 @@ body, input, textarea, select, header, article, section, aside, pre {
   line-height: 1.6;
   letter-spacing: 0.7px;
   font-size: 13px;
-  color: $em-color;
+  color: $em-text-gray;
+}
+
+input, select, textarea, select, radio {
+  background-color: $em-input-bg-color;
+  border: 1px solid $em-border-gray;
+  color: $em-text-gray;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: $em-text-gray;
+  -webkit-box-shadow: 0 0 0px 1px $em-input-bg-color inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 
