--- a/client/src/styles/calendar.scss
+++ b/client/src/styles/calendar.scss
@@ -1,8 +1,7 @@
 .react-calendar {
   width: 350px;
   max-width: 100%;
-  background: white;
-  //border: 1px solid #e6ecf5;
+  background: $em-bg-gray-medium;
   border: none;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
@@ -20,6 +19,9 @@
   border: 0;
   outline: none;
 }
+.react-calendar button:enabled{
+  color: $em-text-gray;
+}
 .react-calendar button:enabled:hover {
   cursor: pointer;
 }
@@ -33,10 +35,12 @@
 }
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
+  color: $em-text-blue;
+  background-color: $em-bg-white;
 }
 .react-calendar__navigation button[disabled] {
-  background-color: #f0f0f0;
+  color: $em-text-gray-light;
+  background-color: $em-bg-gray-dark;
 }
 .react-calendar__month-view__weekdays {
   text-align: center;
@@ -57,11 +61,11 @@
   font-size: 0.75em;
   padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
 }
-.react-calendar__month-view__days__day--weekend {
-  color: red;
+.react-calendar button.react-calendar__month-view__days__day--weekend:not(.react-calendar__tile--active) {
+  color: $em-text-blue;
 }
-.react-calendar__month-view__days__day--neighboringMonth {
-  color: #969696;
+.react-calendar button:enabled.react-calendar__month-view__days__day--neighboringMonth {
+  color: $em-text-gray-light;
 }
 .react-calendar__year-view .react-calendar__tile,
 .react-calendar__decade-view .react-calendar__tile,
@@ -75,29 +79,33 @@
   background: none;
 }
 button.react-calendar__tile:disabled {
-  background-color: #f0f0f0;
+  color: $em-text-gray-light;
+  background-color: $em-bg-gray-dark;
 }
 button.react-calendar__tile:enabled:hover,
 button.react-calendar__tile:enabled:focus {
-  background-color: #e6e6e6;
+  color: $em-text-blue;
+  background-color: $em-bg-white;
 }
 .react-calendar__tile--hasActive {
-  background: #76baff;
+  background: $em-bg-blue;
 }
 button.react-calendar__tile--hasActive:enabled:hover,
 button.react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
+  color: $em-text-white;
+  background: $em-bg-blue;
 }
 .react-calendar__tile--active {
-  background: $em-alt-btn-bg;
-  color: $em-alt-btn-text;
+  color: $em-text-white;
+  background: $em-bg-blue;
 }
 button.react-calendar__tile--active:enabled:hover,
 button.react-calendar__tile--active:enabled:focus {
-  background: $em-alt-btn-bg;
+  color: $em-text-white;
+  background: $em-bg-blue;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
-  background-color: $em-alt-btn-bg;
+  background-color: $em-bg-white;
 }
 //----Overrides----//
 button{
