--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -2,22 +2,22 @@
   width: 80%;
   min-width: 700px;
   margin: 10px auto;
-  background-color: $em-bg-white;
-  border: 1px solid #e6ecf5;
+  background-color: $em-bg-gray-medium;
+  border: 1px solid $em-border-gray;
 
   form{
     .em-form-control{
       padding: 20px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #e6ecf5;
+      border-bottom: 1px solid $em-border-gray;
 
       .field-label{
         padding: 5px 0;
         width: 35%;
         min-width: 200px;
         font-weight: bold;
-        color: #545566;
+        color: $em-text-blue;
       }
       .field-value{
         padding: 10px 0 0 0;
@@ -27,8 +27,6 @@
           font-size: 12px;
           width: 450px;
           outline: none;
-          border: 1px solid #e6ecf5;
-          color: $em-input-color;
 
           &:disabled{
             cursor: default;
@@ -42,9 +40,7 @@
         }
 
         input[type="text"], textarea{
-          background-color: $em-bg-gray;;
           border-radius: 3px;
-          border: 1px solid rgba(0,0,0,.12);
           margin: 0 0 4px;
           max-width: 100%;
           padding: 8px;
@@ -52,13 +48,13 @@
           outline: none;
 
           &:focus{
-            background-color: $em-bg-white;
+            //background-color: $em-bg-white;
           }
         }
         input[type="reset"], input[type="submit"], input[type="button"]{
           border-radius: 10px;
           margin-right: 5px;
-          color: $em-input-color;
+          color: $em-text-gray;
           outline: none;
           width: 100px;
           background: none;
@@ -81,7 +77,7 @@
         }
       }
       .sub-text{
-        color: #9a9c9b;
+        color: $em-text-gray-light;
         font-weight: normal;
         font-size: 12px;
       }
