Theme changes for server and some fixes in client side

--- a/client/src/styles/createpost.scss
+++ b/client/src/styles/createpost.scss
@@ -81,6 +81,10 @@
         font-weight: normal;
         font-size: 12px;
       }
+
+      &:last-child{
+        border-bottom: none;
+      }
     }
   }
 }
