--- a/client/src/styles/contactus.scss
+++ b/client/src/styles/contactus.scss
@@ -82,6 +82,10 @@
         font-weight: normal;
         font-size: 12px;
       }
+
+      &:last-child{
+        border-bottom: none;
+      }
     }
   }
 }
