--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -49,15 +49,28 @@ input, select, textarea, select, radio {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
 textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  -webkit-text-fill-color: $em-text-gray;
-  -webkit-box-shadow: 0 0 0px 1px $em-input-bg-color inset;
-  transition: background-color 5000s ease-in-out 0s;
+select:-webkit-autofill:focus,
+select:-webkit-autofill:active,{
+  //-webkit-text-fill-color: $em-text-gray;
+  //-webkit-box-shadow: 0 0 0px 1px $em-input-bg-color inset;
+  //transition: background-color 5000s ease-in-out 0s;
+  -webkit-animation-delay: 1s; /* Safari support - any positive time runs instantly */
+  -webkit-animation-name: autofill;
+  -webkit-animation-fill-mode: both;
+}
+
+@-webkit-keyframes autofill {
+  0%,100% {
+    color: $em-text-gray;
+    background: $em-bg-gray-dark;
+  }
 }
 
 
