--- a/server/scss/reset.scss
+++ b/server/scss/reset.scss
@@ -5,7 +5,7 @@ article.reset-password{
 
 
   .reset-password-container{
-    border: 1px solid #ccc;
+    border: 1px solid $em-border-gray;
     border-radius: 5px;
     margin: 80px;
     min-width: 380px;
@@ -14,11 +14,11 @@ article.reset-password{
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
+    background-color: $em-bg-gray-medium;
 
     .header{
       padding: 20px;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $em-border-gray;
 
       .main-title{
         font-size: 28px;
@@ -26,7 +26,7 @@ article.reset-password{
     }
     .content{
       padding: 20px;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $em-border-gray;
 
       .form-error{
         color: red;
@@ -43,14 +43,11 @@ article.reset-password{
         }
         input[type="text"], input[type="password"], input[type="email"]{
           width: 100%;
-          background: #fff;
           line-height: 1.45;
           padding: 4px;
-          border: 1px solid #ccc;
         }
         input, textarea{
           &:focus{
-            border-color: #1f24cc;
             box-shadow: none;
             outline: 0;
           }
