--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -5,7 +5,7 @@ article.sign-up{
 
 
   .sign-up-container{
-    border: 1px solid #ccc;
+    border: 1px solid $em-border-gray;
     border-radius: 5px;
     margin: auto;
     min-width: 380px;
@@ -14,11 +14,11 @@ article.sign-up{
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
+    background-color: $em-bg-gray-medium;
 
     .header{
       padding: 20px;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $em-border-gray;
 
       .main-title{
         font-size: 28px;
@@ -41,7 +41,7 @@ article.sign-up{
     }
     .content-local{
       padding: 20px;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $em-border-gray;
 
       .form-error{
         color: red;
@@ -55,14 +55,11 @@ article.sign-up{
         }
         input[type="text"], input[type="password"], input[type="email"]{
           width: 100%;
-          background: #fff;
           line-height: 1.45;
           padding: 4px;
-          border: 1px solid #ccc;
         }
         input, textarea{
           &:focus{
-            border-color: #1f24cc;
             box-shadow: none;
             outline: 0;
           }
@@ -79,7 +76,7 @@ article.sign-up{
           vertical-align: middle;
           border: 1px solid #ff5e3a;
           background-color: #ff5e3a;
-          color: #fff;
+          color: $em-text-white;
 
           &:hover{
             opacity: 0.8;
@@ -91,7 +88,7 @@ article.sign-up{
       padding: 20px;
 
       .facebook-button{
-        color: #fff !important;
+        color: $em-text-white !important;
         background: #3b5998;
         border-radius: 3px;
         position: relative;
@@ -116,7 +113,7 @@ article.sign-up{
         }
 
         span{
-          color: #fff;
+          color: $em-text-white;
           background: #3b5998;
           border-radius: 3px;
           position: relative;
