--- a/server/scss/variables.scss
+++ b/server/scss/variables.scss
@@ -1,9 +1,33 @@
-//Variables
+//Background
+$em-bg-gray-dark: #343434;
+$em-bg-gray-medium: #424242;
+$em-bg-gray-light: #505050;
+$em-bg-gray-verylight: #eee;
+$em-bg-white: #fff;
+$em-bg-blue: #09a7f3;
+
+//Text
+$em-text-white: #fff;
+$em-text-gray: #eee;
+$em-text-gray-light: #b1b1b1;
+$em-text-gray-dark: #424242;
+$em-text-blue: #09a7f3;
+
+//Input Background
+$em-input-bg-color: #393939;
 
 //Border
-$em-border-gray: #ccc;
+$em-border-gray: #363636;
 
 
-//Background Color
-$em-bg-gray: #f9f9f9;
-$em-bg-white: #fff;
+
+
+//TODO
+//Button - Action
+$em-btn-text: #09a7f3;
+
+//Button - Alt
+$em-alt-btn-text: #fff;
+$em-alt-btn-bg: #09a7f3;
+$em-alt-btn-text-active: #09a7f3;
+$em-alt-btn-bg-active: none;
