--- a/client/src/styles/uploadphotomodal.scss
+++ b/client/src/styles/uploadphotomodal.scss
@@ -5,7 +5,7 @@
     width: 160px;
 
     .display-pic{
-      border: 1px solid #ececec;
+      border: 1px solid $em-border-gray;
       position: relative;
 
       picture img {
