--- a/client/src/styles/typeaheadautocomplete.scss
+++ b/client/src/styles/typeaheadautocomplete.scss
@@ -1,17 +1,35 @@
-.rbt-menu.dropdown-menu{
+.rbt-input-main{
+  color: $em-text-gray;
+  background-color: $em-input-bg-color;
+  border: 1px solid $em-border-gray;
+
+  &:hover,
+  &:focus,
+  &:active{
+    color: $em-text-gray;
+    background-color: $em-input-bg-color;
+    border: 1px solid $em-border-gray;
+  }
+}
+
+.rbt-input-hint {
+  display: none !important;
+}
+
+.rbt-menu.dropdown-menu {
   padding: 5px;
   position: absolute;
   top: 30px;
   overflow-x: auto;
   width: 100%;
   border-radius: 3px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
+  border: 1px solid $em-border-gray;
   z-index: 999;
   background-color: $em-bg-gray-dark;
 
-  li{
+  li {
 
-    a.dropdown-item{
+    a.dropdown-item {
       height: 26px;
       line-height: 26px;
       border-radius: 3px;
@@ -19,11 +37,11 @@
       cursor: pointer;
       font-size: 13px;
 
-      &.active, &:hover,&:focus{
+      &.active, &:hover, &:focus {
         background-color: $em-bg-gray-light;
       }
 
-      span,mark{
+      span, mark {
         font-size: 13px;
         color: $em-text-gray;
       }
