--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -8,7 +8,7 @@
 @import "reset.scss";
 
 ::selection {
-  background-color: #e6e6e6;
+  background-color: $em-bg-gray-verylight;
 }
 html{
   height:100%;
