--- a/server/scss/login.scss
+++ b/server/scss/login.scss
@@ -43,7 +43,7 @@ article.login{
       border-bottom: 1px solid $em-border-gray;
 
       .form-error{
-        color: red;
+        color: #ff7e61
       }
 
       .form-group{
