--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -44,7 +44,7 @@ article.sign-up{
       border-bottom: 1px solid $em-border-gray;
 
       .form-error{
-        color: red;
+        color: #ff7e61
       }
 
       .form-group{
