--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -190,7 +190,7 @@ article.login {
       padding: 20px;
       border-bottom: 1px solid #363636; }
       article.login .login-container .content-local .form-error {
-        color: red; }
+        color: #ff7e61; }
       article.login .login-container .content-local .form-group {
         padding-bottom: 10px; }
         article.login .login-container .content-local .form-group:last-child {
@@ -298,7 +298,7 @@ article.sign-up {
       padding: 20px;
       border-bottom: 1px solid #363636; }
       article.sign-up .sign-up-container .content-local .form-error {
-        color: red; }
+        color: #ff7e61; }
       article.sign-up .sign-up-container .content-local .form-group {
         padding-bottom: 10px; }
         article.sign-up .sign-up-container .content-local .form-group:last-child {
@@ -378,12 +378,11 @@ article.forgot-password {
       article.forgot-password .forgot-password-container .header .main-title {
         font-size: 28px; }
     article.forgot-password .forgot-password-container .content {
-      padding: 20px;
-      border-bottom: 1px solid #363636; }
+      padding: 20px; }
       article.forgot-password .forgot-password-container .content .form-error {
-        color: red; }
+        color: #ff7e61; }
       article.forgot-password .forgot-password-container .content .form-success {
-        color: green; }
+        color: #009d00; }
       article.forgot-password .forgot-password-container .content .form-group {
         padding-bottom: 10px; }
         article.forgot-password .forgot-password-container .content .form-group:last-child {
@@ -431,12 +430,11 @@ article.reset-password {
       article.reset-password .reset-password-container .header .main-title {
         font-size: 28px; }
     article.reset-password .reset-password-container .content {
-      padding: 20px;
-      border-bottom: 1px solid #363636; }
+      padding: 20px; }
       article.reset-password .reset-password-container .content .form-error {
-        color: red; }
+        color: #ff7e61; }
       article.reset-password .reset-password-container .content .form-success {
-        color: green; }
+        color: #009d00; }
       article.reset-password .reset-password-container .content .form-group {
         padding-bottom: 10px; }
         article.reset-password .reset-password-container .content .form-group:last-child {
@@ -465,7 +463,7 @@ article.reset-password {
             opacity: 0.8; }
 
 ::selection {
-  background-color: #e6e6e6; }
+  background-color: #eee; }
 
 html {
   height: 100%; }
