--- a/server/scss/login.scss
+++ b/server/scss/login.scss
@@ -31,10 +31,10 @@ article.login{
           text-decoration: underline;
         }
         &:active{
-          color:#181ca0;
+          //color:#181ca0;
         }
         &:visited{
-          color:#1f24cc;
+          //color:#1f24cc;
         }
       }
     }
@@ -77,10 +77,10 @@ article.login{
             text-decoration: underline;
           }
           &:active{
-            color:#181ca0;
+            //color:#181ca0;
           }
           &:visited{
-            color:#1f24cc;
+            //color:#1f24cc;
           }
         }
         button[type="submit"]{
