--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -34,6 +34,11 @@ input, select, textarea, select, radio {
   color: $em-text-gray;
 }
 
+a:link { color: $em-text-blue; }
+a:visited { color: $em-text-blue; }
+a:hover { color: $em-text-blue; }
+a:active { color: $em-text-blue; }
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
