--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -32,10 +32,10 @@ article.sign-up{
           text-decoration: underline;
         }
         &:active{
-          color:#181ca0;
+          //color:#181ca0;
         }
         &:visited{
-          color:#1f24cc;
+          //color:#1f24cc;
         }
       }
     }
